added nav to master template but styles are a mess. Need to grab a template for now I think

--- a/Views/HomePage.cshtml
+++ b/Views/HomePage.cshtml
@@ -19,7 +19,7 @@
             <p style="text-align: left">@Umbraco.Field("promoSubTitle")</p>
 
             <div class="cta">
-                <a href="<%= IOHelper.ResolveUrl(SystemDirectories.Umbraco) %>" class="button">@Umbraco.Field("promoButtonText")</a>
+                <a href="/Umbraco/" class="button">@Umbraco.Field("promoButtonText")</a>
             </div>
 
         </div>
