--- a/Views/TextPage.cshtml
+++ b/Views/TextPage.cshtml
@@ -17,7 +17,7 @@
             </div>
             
             <div style="margin-top: 10vh">
-                <h5>"@Umbraco.Field("quote")" <i>Brad</i> </h5>
+                <h5>"@Umbraco.Field("quote")"<br/> <i>@Umbraco.Field("quotedPerson")</i> </h5>
             </div>
         </div>
     </article>
