--- a/Views/Master.cshtml
+++ b/Views/Master.cshtml
@@ -11,28 +11,50 @@
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
- <meta charset="utf-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
- <title></title>
- <meta name="description" content="">
- <meta name="author" content="">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
- <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,700,600' rel='stylesheet' type='text/css'>
- <link href='//fonts.googleapis.com/css?family=Asap:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,700,600' rel='stylesheet' type='text/css'>
  
 
- <link rel="stylesheet" href="../../Umbraco/assets/css/nonodes.style.min.css" />
+    <link rel="stylesheet" href="../../Umbraco/assets/css/nonodes.style.min.css" />
 
- <!--[if lt IE 9]>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
- <![endif]-->
+    <link rel="stylesheet" href="/Css/overrides.css" />
+
+    <!--[if lt IE 9]>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
+    <![endif]-->
 
 </head>
+
+<header>
+    <div class="navbar-header">
+        <div class="nav-collapse">
+            <ul>
+				<li><a href="/">Home</a></li>
+                
+                @{
+	                var selection = CurrentPage.Site().Children.Where("Visible");
+                }
+		        @foreach(var item in selection){
+			        <li>
+				        <a href="@item.Url">@item.Name</a>
+			        </li>
+		        }
+
+            </ul>
+        </div>
+    </div>
+</header>
+
 <body>
 
-    <nav> <a href="/">Home</a> </nav>
+
 
 @RenderBody()
 
